# galaxypad

./: .firebaserc  .gitignore  Cargo.toml  LICENSE  LICENSE_MIT  build.sh  docker-compose.yml  firebase.json  package.json  pyproject.toml
a/: galaxy.py  game.py  game.py.bak  iface.py  images.pkl  images.py  parser.py  test_parser.py  trampoline.py
runtime/: Cargo.toml  callgrind.out.70534  callgrind.out.iterative  callgrind.out.iterative.2
runtime/src/: runtime.rs
sidecar/icfpjit/: Cargo.toml  galaxy.txt
sidecar/icfpjit/src/: jit.rs  lib.rs  pseudo.rs
sidecar/icfpjit/testcases/custom/: b_combinator.testcases.icfp  car.icfp  cdr.icfp  cons.icfp  false.testcases.icfp  procedures.icfp  tx.icfp
sidecar/icfpjit/testcases/provided/: add.testcases.icfp  apply.testcases.icfp  b_combinator.testcases.icfp  c_combinator.testcases.icfp  car.testcases.icfp  cdr.testcases.icfp  checkerboard.testcases.icfp  cons.testcases.icfp  decrement.testcases.icfp  definition.testcases.icfp  divide.testcases.icfp  draw.testcases.icfp  equality.testcases.icfp  equals.testcases.icfp  false.testcases.icfp  i_combinator.testcases.icfp  if_zero.testcases.icfp  increment.testcases.icfp  interact.testcases.icfp  isnil.testcases.icfp  lessthan.testcases.icfp  list_construction.testcases.icfp  modulate_list.testcases.icfp  multidraw.testcases.icfp  multiply.testcases.icfp  negate.testcases.icfp  nil.testcases.icfp  power_of_two.testcases.icfp  s_combinator.testcases.icfp  substitution.testcases.icfp  testcases.icfp  true.testcases.icfp  variables.testcases.icfp  vector.testcases.icfp
(+88 files in other folders)
