[tool.poetry]
name = "icfp2020"
version = "0.1.0"
description = ""
authors = ["Alex Kesling <alex@kesling.co>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
sidecar = {path = "sidecar/artifacts/wheels/sidecar-0.2.0-cp37-cp37m-macosx_10_7_x86_64.whl", platform = "darwin"}
numpy = "^1.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
